# old_iris

./: CMakeLists.txt  README.md  package.xml  stack.xml
include/beam/: arg.hpp  assert.hpp  context.hpp  glog.hpp  logger.hpp  severity_type.hpp  static_scope.hpp  static_scope_impl.hpp
include/llog/: argument.hpp  logger.hpp  severity_type.hpp  static_context.hpp
src/: logger-printf.cpp  test.cpp
test/: example.cpp
